src/yini_test/cases/golden/lenient/valid/strings/r-prefix-explicit-raw.yini
@yini

^ Strings
key = R"value"
