src/yini_test/cases/golden/lenient/invalid/strings/string-not-closed-triple-quote.yini
@yini

^ Strings
message = """never closed
